Wire instance network selection to Kube-OVN
